syntax = "proto3";

service PaymentService {
    rpc Func1 (IFunc1Req) returns (IFunc1Res) {}
}

message IFunc1Req { }

message IFunc1Res { }